--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-            <ul class="navbar-nav text-right" style="font-size: 20px;">
-              <li class="nav-item" style="padding-left: 30rem; padding-right: 6rem;">
+          <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
+            <ul class="navbar-nav w-100 justify-content-end" style="font-size: 20px;">
+              <li class="nav-item" style="margin-left: 2rem; margin-right: 6rem;">
                 <a class="nav-link active" aria-current="page" href="#home">Home</a>
               </li>
-              <li class="nav-item" style="padding-right: 6rem;">
+              <li class="nav-item" style="margin-left: 2rem; margin-right: 6rem;">
                 <a class="nav-link" href="#features">Features</a>
               </li>
-              <li class="nav-item" style="padding-right: 6rem;">
+              <li class="nav-item" style="margin-left: 2rem; margin-right: 6rem;">
                 <a class="nav-link" href="#accessories">Accessories</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item" style="margin-left: 2rem; margin-right: 6rem;">
                   <a class="nav-link" href="#contacts">Contacts</a>
               </li>
             </ul>
